# Project-Memory-MCP

./: .containerignore  .geminiignore  .gitignore  .mcp.json  Cargo.toml  Containerfile  GEMINI.md  Implementation.Plan.md  Initial.DesignDocument.md  Playwright Test Report.html  Project-Memory-MCP.code-workspace  README-WIZARD.md  README.md  Second.DesignDocument.md  _deprecated_start-supervisor.ps1  _deprecated_stop-supervisor.ps1  _fix-paths.ps1  agent_use-logDumps.txt  bugs-supervisor-gui-no-worky.md  build-cli-fast.ps1  build-cli.ps1  build-interactive-terminal-iced.ps1  build-warning-investigation-list.md  build_install.README.md  build_install.ps1  chat before during and after it broke.txt  chat_copy_from_other_workspace.md  cleanup-branches.ps1  copied-build-output.md  copied-tool-output.txt  copied_devtools_log.md  copied_diagnostics-full_build.txt  copied_logs.txt  copied_terminal_output-build_animated_install.txt  copied_terminal_output-build_install.txt  copied_terminal_output-successful_connection_to_VMssh.txt  copied_terminal_output-supervisor_launch.txt  copied_terminal_output.txt  copy-to-newgoo.ps1  git-error-logs.txt  (+34 more)
client-server/: Cargo.toml
client-server/src/: client_detect.rs  local_tools.rs  log.rs  main.rs  proxy.rs  upstream.rs
client-server/src/db/: instructions.rs  mod.rs  plan.rs  steps.rs  workspace.rs
crates/cartographer-core/: Cargo.toml
crates/cartographer-core/src/: lib.rs  main.rs
crates/cartographer-core/tests/: integration_test.rs
interactive-terminal/: .qmlls.ini  Cargo.toml  PTY_HOST_IMPL.md  README.md  build-interactive-terminal.ps1  build.rs  build_out2.txt
interactive-terminal-iced/: Cargo.toml  README.md
interactive-terminal-iced/resources/: terminal.html
interactive-terminal-iced/src/: app_state.rs  backend_bridge.rs  command_executor.rs  main.rs  output_persistence.rs  protocol.rs  saved_commands.rs  session.rs  tcp_server.rs  tray.rs  types.rs  webview_host.rs
interactive-terminal-iced/src/integration/: agent_session_protocol.rs  hosted_session_adapter.rs  mod.rs
interactive-terminal-iced/src/terminal_core/: mod.rs  output_tracker.rs  ws_server.rs
interactive-terminal-iced/src/ui/: approval_panel.rs  mod.rs  saved_commands_panel.rs  sessions_panel.rs  settings_panel.rs  status_bar.rs  terminal_panel.rs  theme.rs
interactive-terminal/.cargo/: config.toml
interactive-terminal/build-logs/: warnings-imports-20260216-201857.txt
interactive-terminal/docs/: agent-launch-runbook.md  launch-intent-schema.md  provider-capability-matrix-detail.md  provider-capability-matrix.md  runtime-ports-and-mcp-modes.md
interactive-terminal/pty-host/: Cargo.toml
interactive-terminal/pty-host/src/: ipc_server.rs  main.rs  pty_backend.rs  pty_host_protocol.rs  pty_manager.rs
interactive-terminal/qml/: CommandCard.qml  DeclineDialog.qml  OutputView.qml  TerminalView.qml  main.qml
interactive-terminal/resources/: terminal.html
interactive-terminal/src/: app_icon.cpp  audit_log.rs  build_check.rs  command_executor.rs  cxxqt_bridge.rs  host_bridge_listener.rs  launch_builder.rs  main.rs  perf_monitor.rs  protocol.rs  pty_host_launcher.rs  pty_host_protocol.rs  saved_commands.rs  saved_commands_repository.rs  session.rs  system_tray.rs  tcp_server.rs
interactive-terminal/src/_archive/: cxxqt_bridge.rs.bak
interactive-terminal/src/cxxqt_bridge/: allowlist_state.rs  completed_outputs.rs  ffi.rs  helpers.rs  initialize.rs  invokables.rs  mod.rs  pty_host_client.rs  runtime_tasks.rs  saved_commands_state.rs  session_runtime.rs  state.rs  tests.rs  window_focus.rs
interactive-terminal/src/integration/: agent_session_protocol.rs  hosted_session_adapter.rs
interactive-terminal/src/terminal_core/: framing.rs  (+5 more)
interactive-terminal/tests/: bridge_parity.rs  prebind_listener.rs
pm-approval-gui/: Cargo.toml  build.rs
pm-approval-gui/qml/: ActionButtons.qml  ConfirmRejectCard.qml  main.qml
pm-approval-gui/src/: app_icon.cpp  main.rs
pm-brainstorm-gui/: Cargo.toml  build.rs
pm-brainstorm-gui/qml/: ChatPanel.qml  CountdownBar.qml  FormShell.qml  FreeTextInput.qml  QuestionCard.qml  RadioSelector.qml  main.qml
pm-brainstorm-gui/src/: app_icon.cpp  main.rs
pm-cli/: Cargo.toml
pm-cli-fast/: Cargo.toml
pm-cli-fast/src/: animations.rs  main.rs
pm-cli/src/: animations.rs  build_phase.rs  builds.rs  code_index.rs  command_registry.rs  global_claude.rs  install_config.rs  install_menu.rs  launch_menu.rs  main.rs  output_viewer.rs  stop_menu.rs  utils.rs  warning_summary.rs
pm-gui-forms/: Cargo.toml
pm-gui-forms/qml/: ActionButtons.qml  ConfirmRejectCard.qml  FormShell.qml.orig  FreeTextInput.qml  QuestionCard.qml  RadioSelector.qml
pm-gui-forms/src/: lib.rs  timer.rs  window.rs
pm-gui-forms/tests/: test_protocol.rs  test_refinement.rs  test_timer.rs  test_window_transport.rs  test_wrappers.rs
pm-install-gui/: .qmlls.ini  Cargo.toml  build.rs
pm-install-gui/qml/: ComponentSelectionPage.qml  FinishPage.qml  PathSelectionPage.qml  ProgressPage.qml  WelcomePage.qml  main.qml
pm-install-gui/src/: app_icon.cpp  main.rs
supervisor/: Cargo.toml  build.rs  lint-qml.ps1  supervisor.example.toml
supervisor-iced/: Cargo.toml
supervisor-iced/docs/: original-ui-reference.md
supervisor-iced/ref/: AboutPanel.qml  CartographerPanel.qml  McpProxyPanel.qml  PairingDialog.qml  PlansPanel.qml  SessionsPanel.qml  SettingsPanel.qml  SprintsPanel.qml  plans_actions.rs
supervisor-iced/src/: app_state.rs  main.rs  tray.rs
supervisor/qml/: ActivityPanel.qml  CartographerPanel.qml  ChatbotPanel.qml  EventBroadcastPanel.qml  McpProxyPanel.qml  MySessionsPanel.qml  PairingDialog.qml  PlansPanel.qml  ServiceCard.qml  SessionsDashboardPanel.qml  SessionsPanel.qml  SettingsPanel.qml  StatusRing.qml  main.qml
supervisor/resources/: app.manifest
supervisor/src/: app_icon.cpp  auth_middleware.rs  chatbot.rs  config.rs  gui_server.rs  lib.rs  lock.rs  logging.rs  main.rs  mdns_broadcaster.rs  proxy.rs  registry.rs  runtime_output.rs  tray_tooltip.rs
supervisor/tests/: form_app_integration.rs  lock_integration.rs  observability.rs
(+2618 files in other folders)
