[workspace]
resolver = "2"
members = ["interactive-terminal", "supervisor"]

[workspace.dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.29"
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }
anyhow = "1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
