[package]
name = "interactive-terminal"
version = "0.1.0"
edition = "2021"
description = "Interactive terminal GUI for command approval/decline"

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.29"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }

[dev-dependencies]
regex = "1"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
