[package]
name = "interactive-terminal"
version = "0.1.0"
edition = "2021"
description = "Interactive terminal GUI for command approval/decline"

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
regex = "1"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

