[package]
name = "interactive-terminal"
version = "0.1.0"
edition = "2021"
description = "Interactive terminal GUI for command approval/decline"

[features]
## Activate the out-of-process PTY host path.
## When enabled, ConPTY sessions are delegated to the `pty-host` binary rather than
## running directly in the UI process.  The `pty-host` feature gates all new code
## paths; the legacy ConPTY path is preserved under `#[cfg(not(feature = "pty-host"))]`.
pty-host = []

[dependencies]
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sysinfo = "0.29"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
portable-pty = "0.8"

[dev-dependencies]
regex = "1"

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

