[package]
name = "pm-approval-gui"
version = "0.1.0"
edition = "2021"
description = "Approval gate dialog — always-on-top confirmation window with countdown timer for gated plan steps"

[dependencies]
pm-gui-forms = { path = "../pm-gui-forms" }
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
