[package]
name = "pm-cli-fast"
version = "0.1.0"
edition = "2021"
description = "Project Memory MCP — CLI launcher (no tachyonfx, fast compile)"

[[bin]]
name = "pm-cli-fast"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.30.0"
dirs = "5"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
ratatui-explorer = "0.3.0"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
