[package]
name = "pm-cli"
version = "0.1.0"
edition = "2021"
description = "Project Memory MCP — interactive CLI launcher"

[[bin]]
name = "pm-cli"
path = "src/main.rs"

[dependencies]
crossterm = { version = "0.27", features = ["event-stream"] }
ratatui = "0.30.0"
dirs = "5"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tachyonfx = "0.25.0"
ratatui-explorer = "0.3.0"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1"
