[package]
name = "pm-gui-forms"
version = "0.1.0"
edition = "2021"
description = "Shared protocol types, NDJSON transport, and form utilities for Project Memory GUI apps"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = "2"
