[package]
name = "pm-install-gui"
version = "0.1.0"
edition = "2021"
description = "Traditional install wizard for Project Memory MCP"

[dependencies]
pm-gui-forms = { path = "../pm-gui-forms" }
cxx = "1.0.95"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
