[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"
description = "Project Memory MCP Supervisor — manages lifecycle of MCP, interactive terminal, and dashboard services"

[[bin]]
name = "supervisor"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true }

[dev-dependencies]
tempfile = "3"
