[package]
name = "supervisor"
version = "0.1.0"
edition = "2021"
description = "Project Memory MCP Supervisor — manages lifecycle of MCP, interactive terminal, and dashboard services"

[[bin]]
name = "supervisor"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
sysinfo = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
hyper-util = { workspace = true }
bytes = { workspace = true }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
rand = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cxx = { version = "1.0.95", optional = true }
cxx-qt = { version = "0.8", optional = true }
cxx-qt-lib = { version = "0.8", features = ["qt_full"], optional = true }

[features]
default = ["supervisor_qml_gui"]
supervisor_qml_gui = ["dep:cxx", "dep:cxx-qt", "dep:cxx-qt-lib"]

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Console", "Win32_Graphics_Gdi"] }

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
