[package]
name = "cartographer-core"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cartographer-core"
path = "src/main.rs"

[lib]
name = "cartographer_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
rayon = "1"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
regex = "1"
