[package]
name = "pty-host"
version = "0.1.0"
edition = "2021"
description = "Out-of-process PTY host for the interactive-terminal GUI"

[[bin]]
name = "pty-host"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
portable-pty = "0.8"
windows-sys = { version = "0.59", features = ["Win32_Foundation"] }
